--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
-
+	<style>
+		body{
+			scale: 0.98;
+		}
+	</style>
 </head>
 
 <body class="green_light">
@@ -36,12 +40,15 @@
             <div class="logo_text">Gringinu's Plants</div>
          </div>
          <div style="display: flex; width:100%; flex-direction: row-reverse;">
-            <button style="    width: 50px;
-            height: 50px;" onclick="change_dark_light_theme()">
+
+			
+            <button style="width: 50px; height: 50px;" onclick="change_dark_light_theme()">
                <span id="dark_mode_switcher_icon" class="material-symbols-outlined">
                   dark_mode
                </span>
             </button>
+
+
             <button id="methods_btn" onclick="nav_button_click(event)">
                Methods
             </button>
